@@ -1,3 +1,9 @@
+2008-04-07  Andreia Gaita <avidigal@novell.com> 
+
+	* gluezilla.cpp, gluezilla.h: Use gluezilla_init for platform initialization
+	code only, browser widget initialization code moved to createBrowserWindow.
+	Fixes support of more than one embedded browser instance.
+
 2008-03-27  Andreia Gaita  <avidigal@novell.com>
 
 	* gluezilla.cpp, gluezilla.h: Debug helper method change
